# Agent-Course-Final-Assignment

./: .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  tool_test.py
app/: config.py  task_controller.py
app/application/: ai_agent.py  langgraph_agent.py  llm_service.py  orchestrator.py  ports.py  task_processor.py  tool_service.py
app/domain/: agent.py  conversation.py  message.py  prompt_strategy.py  task.py  tool.py  value_objects.py
app/infrastructure/: api_task_gateway_adapter.py  env_config.py  http_gateway.py  langfuse_tracer_adapter.py  langgraph_agent_adapter.py  llm_service.py  openai_llm_adapter.py  task_controller.py  telemetry_factory.py  tool_provider.py  tool_router.py  tool_selection_adapter.py  tools_module.py  vector_tools.py
app/services/: media_service.py
