[tool.poetry]
name = "final-assignment-template"
version = "0.1.0"
description = ""
authors = ["Zhima-Mochi <yehgoter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gradio = {extras = ["oauth"], version = "^5.29.0"}
requests = "^2.32.3"
langchain-openai = "^0.3.16"
langchain-core = "^0.3.59"
langgraph = "^0.4.3"
duckduckgo-search = "^8.0.1"
pandas = "^2.2.3"
PyMuPDF = "^1.24.0"
dotenv = "^0.9.9"
openai = "^1.78.0"
beautifulsoup4 = "^4.13.4"
chess = "^1.11.2"
opencv-python = "^4.11.0.86"
pytesseract = "^0.3.13"
pypdf2 = "^3.0.1"
speechrecognition = "^3.14.2"
openpyxl = "^3.1.5"
langchain-huggingface = "^0.2.0"
langchain-community = "^0.3.23"
supabase = "^2.15.1"
wikipedia = "^1.4.0"
arxiv = "^2.2.0"
typing-extensions = "^4.13.2"
youtube-transcript-api = "^1.0.3"
faiss-cpu = {version = "^1.11.0", optional = true}
yt-dlp = "^2025.5.22"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
matplotlib = "^3.10.3"
langfuse = "^2.60.5"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
